PROJECT( m48 )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/ )

SET( CMAKE_CURRENT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/ )


LIST( APPEND CMAKE_CXX_FLAGS "-std=c++0x" )

SET( CMAKE_CXX_FLAGS_DEBUG "-g -Wall " )

FILE( GLOB_RECURSE TARGET_SOURCES "src/*.cpp" )




SET( PROJECT_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} )

INCLUDE_DIRECTORIES( ${PROJECT_INCLUDE_DIRS} )

LINK_DIRECTORIES( ${PROJECT_LINK_DIRS} )

ADD_EXECUTABLE( ${PROJECT_NAME} ${TARGET_SOURCES} )

#INSTALL ( TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )

